Agregando las plantillas de licencias, mejorando los scripts

--- a/plantillas/TODO
+++ b/plantillas/TODO
@@ -1,1 +1,1 @@
-Debes escribir las cosas que consideras deben hacerse en un futuro con éste paquete.
+Debes escribir las cosas que consideras deben hacerse en un futuro con éste software.
