--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,6 @@
-Autor:
+Autores:
 
- * @AUTHOR_NAME@ <@AUTHOR_MAIL@>
+ * Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>
+ * Diego Alberto Aguilera Zambrano <daguilera85@gmail.com>
+ * Carlos Alejandro Guerrero Mora <guerrerocarlos@gmail.com>
+ * Francisco Javier Vásquez Guerrero <franjvasquezg@gmail.com>
