--- a/TODO
+++ b/TODO
@@ -4,14 +4,13 @@ ANOTACIONES MISCELÁNEAS
 
 GRANDES MODIFICACIONES
 
-* 
+* Hacer una GUI
 
 PEQUEÑAS MODIFICACIONES
 
-* Now running lintian...
-W: canaima-bienvenido source: non-native-package-with-native-version
-E: canaima-bienvenido: copyright-should-refer-to-common-license-file-for-gpl
-E: canaima-bienvenido: menu-icon-not-in-xpm-format /usr/share/icons/canaima-iconos/scalable/places/start-here.svg
-W: canaima-bienvenido: binary-without-manpage usr/bin/canaima-bienvenido
-W: canaima-bienvenido: binary-without-manpage usr/bin/canaima-bienvenido-automatico
+* Mover debs, tar.gz, etc... a los depósitos EMPAQUETAR EMPAQUETAR-TODO
+* Comentar scripts
+* Ayuda de cada ayudante
+* Generar Manual
+* Arreglar debian/
 
