--- a/debian/changelog
+++ b/debian/changelog
@@ -10,5 +10,7 @@ canaima-desarrollador (1.0+0) testing; urgency=low
   * [3a143cd] Actualizando documentación
   * [dea4022] Merge branches 'master' and 'upstream' of
     gitorious.org:canaima-gnu-linux/canaima-desarrollador
+  * [bec681e] Mejorando el esquema de generación de documentación,
+    agregando el lanzador del manual del desarrollador, docs y manpages
 
- -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Wed, 02 Feb 2011 01:06:56 -0430
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Wed, 02 Feb 2011 07:40:04 -0430
