--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+canaima-desarrollador (1.0+1) testing; urgency=low
+
+  * [2725117] Modificando scripts del mantenedor
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Wed, 02 Feb 2011 08:59:47 -0430
+
 canaima-desarrollador (1.0+0) testing; urgency=low
 
   * Primera versión para Canaima GNU/Linux
