--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 canaima-desarrollador (1.0+3) testing; urgency=low
 
   * [7aafd29] Corrigiendo error de chequeo en funciones-desarrollador.sh
+  * [0a756b6] Mejorando la documentación
+  * [c747b3d] Mejorando el formato de los archivos rst
 
- -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Thu, 03 Feb 2011 14:27:04 -0430
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Fri, 04 Feb 2011 15:37:21 -0430
 
 canaima-desarrollador (1.0+2) testing; urgency=low
 
