--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ canaima-desarrollador (1.1+0) testing; urgency=low
   * [c747b3d] Mejorando el formato de los archivos rst
   * [efb5501] Removiendo basura de compilación anterior
   * [21e979a] Corrigiendo error en el Makefile
+  * [cd21b23] Corrigiendo otro error en el Makefile
 
- -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Fri, 04 Feb 2011 15:56:42 -0430
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Fri, 04 Feb 2011 16:00:59 -0430
 
 canaima-desarrollador (1.0+2) testing; urgency=low
 
