--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+canaima-desarrollador (1.1+1) testing; urgency=low
+
+  * [d245c72] Corrigiendo detalles
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Fri, 04 Feb 2011 16:15:45 -0430
+
 canaima-desarrollador (1.1+0) testing; urgency=low
 
   * [7aafd29] Corrigiendo error de chequeo en funciones-desarrollador.sh
