--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+canaima-desarrollador (1.1+2) testing; urgency=low
+
+  * [fe63420] Corrigiendo detalles en el manual
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Fri, 04 Feb 2011 16:29:11 -0430
+
 canaima-desarrollador (1.1+1) testing; urgency=low
 
   * [d245c72] Corrigiendo detalles
