--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+canaima-desarrollador (1.1+3) testing; urgency=low
+
+  * [ff58745] Corrigiendo bugs
+  * [587789c] Cambiando c-d por un enlace y no una copia, arreglado bug
+    a la hora de ver la ayuda
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Wed, 16 Feb 2011 09:20:07 -0430
+
 canaima-desarrollador (1.1+2) testing; urgency=low
 
   * [fe63420] Corrigiendo detalles en el manual
