--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+canaima-desarrollador (1.1+4) testing; urgency=low
+
+  * [6efd10f] Corrigiendo bugs
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Wed, 16 Feb 2011 10:38:48 -0430
+
 canaima-desarrollador (1.1+3) testing; urgency=low
 
   * [ff58745] Corrigiendo bugs
