--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+canaima-desarrollador (1.1+5) testing; urgency=low
+
+  * [b7d1864] Corrigiendo bugs
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Wed, 16 Feb 2011 11:53:42 -0430
+
 canaima-desarrollador (1.1+4) testing; urgency=low
 
   * [6efd10f] Corrigiendo bugs
