--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+canaima-desarrollador (1.1+6) testing; urgency=low
+
+  * [9124c13] Corrigiendo bugs
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Wed, 16 Feb 2011 15:07:00 -0430
+
 canaima-desarrollador (1.1+5) testing; urgency=low
 
   * [b7d1864] Corrigiendo bugs
