--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+canaima-desarrollador (1.1+7) testing; urgency=low
+
+  * [e7aca9a] Corrigiendo bugs
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Wed, 16 Feb 2011 16:25:36 -0430
+
 canaima-desarrollador (1.1+6) testing; urgency=low
 
   * [9124c13] Corrigiendo bugs
