--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 canaima-desarrollador (1.1+7) testing; urgency=low
 
   * [e7aca9a] Corrigiendo bugs
+  * [61049e2] Corrigiendo error
 
- -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Wed, 16 Feb 2011 16:25:36 -0430
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Wed, 16 Feb 2011 16:32:02 -0430
 
 canaima-desarrollador (1.1+6) testing; urgency=low
 
