--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+canaima-desarrollador (1.1+8) testing; urgency=low
+
+  * [cd5cb3b] Corrigiendo bugs
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Wed, 16 Feb 2011 17:35:18 -0430
+
 canaima-desarrollador (1.1+7) testing; urgency=low
 
   * [e7aca9a] Corrigiendo bugs
