--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+canaima-desarrollador (1.1+9) testing; urgency=low
+
+  * [e458a5d] Corrigiendo bugs
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Thu, 17 Feb 2011 17:12:18 -0430
+
 canaima-desarrollador (1.1+8) testing; urgency=low
 
   * [cd5cb3b] Corrigiendo bugs
