--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+canaima-desarrollador (1.1+15) testing; urgency=low
+
+  * [9986c62] Agregando lógica para detectar opciones erróneas
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Fri, 18 Feb 2011 02:21:15 -0430
+
 canaima-desarrollador (1.1+14) testing; urgency=low
 
   * [b8a9ace] Mejorando manual, removiendo script duplicado, corrigiendo
