--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+canaima-desarrollador (1.1+18) testing; urgency=low
+
+  * [6607829] Mejorando declaración de variables
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Fri, 18 Feb 2011 03:36:04 -0430
+
 canaima-desarrollador (1.1+17) testing; urgency=low
 
   * [ca89f38] Mejorando el postrm y corrigiendo bugs
