--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+canaima-desarrollador (1.1+19) testing; urgency=low
+
+  * [e01ce43] Corrigiendo bug
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Fri, 18 Feb 2011 03:57:55 -0430
+
 canaima-desarrollador (1.1+18) testing; urgency=low
 
   * [6607829] Mejorando declaración de variables
