--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+canaima-desarrollador (1.1+23) testing; urgency=low
+
+  * [da36c13] Removiendo residuos y haciendo más específica la forma en
+    que se determina que sólo se modificó el debian/changelog
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Mon, 14 Mar 2011 14:09:20 -0430
+
 canaima-desarrollador (1.1+22) testing; urgency=low
 
   * [49f236d] Especificando mensaje de Nueva versión cuando se hace el
