--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+canaima-desarrollador (1.1+24) testing; urgency=low
+
+  * [06befe6] Mejorando documentación de ayuda
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Mon, 14 Mar 2011 14:49:01 -0430
+
 canaima-desarrollador (1.1+23) testing; urgency=low
 
   * [da36c13] Removiendo residuos y haciendo más específica la forma en
