--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ canaima-desarrollador (1.1+25) testing; urgency=low
 
   * [37c0134] Mejorando Makefile y corrigiendo bug del cambio de
     directorio mientras se empaqueta
+  * [122451d] Corrigiendo error en el Makefile.
 
- -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Mon, 14 Mar 2011 15:48:59 -0430
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Mon, 14 Mar 2011 15:54:03 -0430
 
 canaima-desarrollador (1.1+24) testing; urgency=low
 
