--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ canaima-desarrollador (1.1+25) testing; urgency=low
     directorio mientras se empaqueta
   * [122451d] Corrigiendo error en el Makefile.
   * [6a59e1f] Borrando residuo de compilación.
+  * [a57f3b1] Mejorando la forma en que se firman los paquetes.
 
- -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Mon, 14 Mar 2011 15:56:17 -0430
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Mon, 14 Mar 2011 16:18:01 -0430
 
 canaima-desarrollador (1.1+24) testing; urgency=low
 
