--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ canaima-desarrollador (1.1+25) testing; urgency=low
   * [122451d] Corrigiendo error en el Makefile.
   * [6a59e1f] Borrando residuo de compilación.
   * [a57f3b1] Mejorando la forma en que se firman los paquetes.
+  * [0efc847] Agregando opción "--no-enviar" cuando se empaqueta
 
- -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Mon, 14 Mar 2011 16:18:01 -0430
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Mon, 14 Mar 2011 17:10:24 -0430
 
 canaima-desarrollador (1.1+24) testing; urgency=low
 
