--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+canaima-desarrollador (1.1+27) testing; urgency=low
+
+  * [4513efc] [ canaima-desarrollador ] Los siguientes archivos han sido
+    modificados/añadidos: control funciones-desarrollador.sh
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Thu, 17 Mar 2011 16:49:26 -0430
+
 canaima-desarrollador (1.1+26) testing; urgency=low
 
   * [0e16eeb] [ canaima-desarrollador ] Los siguientes archivos han sido
