--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+canaima-desarrollador (1.1+34) testing; urgency=low
+
+  * [88af140] Agregando dependencias fakeroot y build-essential.
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Sat, 26 Mar 2011 11:51:06 -0430
+
 canaima-desarrollador (1.1+33) testing; urgency=low
 
   * [f013915] Agregando Carlos Escobar a Uploaders.
