--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+canaima-desarrollador (1.1+35) testing; urgency=low
+
+  * [3d4451b] Agregando dependencias a canaima-curiara o www-browser.
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Sun, 27 Mar 2011 12:33:17 -0430
+
 canaima-desarrollador (1.1+34) testing; urgency=low
 
   * [88af140] Agregando dependencias fakeroot y build-essential.
