--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+canaima-desarrollador (1.1+36) testing; urgency=low
+
+  * [a23f02f] Moviendo la ubicación del .desktop a GTK;Development;IDE.
+
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Fri, 15 Apr 2011 01:15:49 -0430
+
 canaima-desarrollador (1.1+35) testing; urgency=low
 
   * [3d4451b] Agregando dependencias a canaima-curiara o www-browser.
