--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ canaima-desarrollador (1.1+39) testing; urgency=low
 
   * [455b67d] Removiendo dependencia a un navegador y la creación de la
     entrada de menú
+  * [ad985a9] Removiendo dependencia a un navegador y la creación de la
+    entrada de menú
 
- -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Wed, 27 Jul 2011 08:30:17 -0430
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Wed, 27 Jul 2011 08:30:31 -0430
 
 canaima-desarrollador (1.1+38) testing; urgency=low
 
