--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ canaima-desarrollador (1.1+39) testing; urgency=low
   * [b362440] Removiendo git-tag del empaquetador
   * [f4e2017] Removiendo git-tag del empaquetador
   * [59a296f] Removiendo git-tag del empaquetador
+  * [0fe9526] Removiendo git-tag del empaquetador
 
- -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Wed, 27 Jul 2011 08:52:25 -0430
+ -- Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>  Wed, 27 Jul 2011 08:52:34 -0430
 
 canaima-desarrollador (1.1+38) testing; urgency=low
 
