Update changelog for 2.0~a1-1 release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 canaima-desarrollador (2.0~a1-1) unstable; urgency=low
 
+  * [00c0198] Removiendo pruebas a los scripts del mantenedor del
+    Makefile.
   * [23cdc59] Deshabilitando creación de pdf momentáneamente.
   * [e759d8a] Actualizando TODO
   * [4d6199f] Corrigiendo mantenimiento para versión 2.0.
